--- a/country.html
+++ b/country.html
@@ -15,9 +15,9 @@
         <header>
             <div class="marg">
                 <div class="header-menu__mobile">
-                    <div><a href="404.html"><img src="images/page1/header/Burger.png" alt="Burger"></a></div>
+                    <div><a href="404.html"><img src="images/page1/header/Burger.webp" alt="Burger"></a></div>
                     <div><a href="index.html">TRAVELCO</a></div>
-                    <div><a href="404.html"><img src="images/page1/header/Cabinet.png" alt="Cabinet"></a></div>
+                    <div><a href="404.html"><img src="images/page1/header/Cabinet.webp" alt="Cabinet"></a></div>
                 </div>
                 <div class="header-menu">
                     <div class="header-menu__left"><a href="index.html">TRAVELCO</a></div>
@@ -43,11 +43,11 @@
             <div class="main-block1">
                 <div class="marg">
                     <div class="main-block1__elem0">
-                        <img src="images/page2/main-block1/by.png" alt="by">
+                        <img src="images/page2/main-block1/by.webp" alt="by">
                         <h2>Беларусь</h2>
                     </div>
                 <div class="main-block1__elem1">
-                    <img src="images/page2/main-block1/Map.png" alt="minsk-foto">
+                    <img src="images/page2/main-block1/Map.webp" alt="minsk-foto">
                     <div class="main-block1__elem1_info" id="page2b1">
                         <h1>О стране</h1>
                         <p>Республика Беларусь расположена в центре Европы, входит в состав региона Восточная Европа. Через страну проходят важнейшие транзитные потоки всего континента, в том числе один из магистральных транспортных коридоров Евразии с юго-запада на северо-восток. Также по территории страны проходят кратчайшие транспортные пути, связывающие два моря – Балтийское и Черное.</p>
@@ -63,28 +63,28 @@
                 </div>
                 <div class="main-block2__elem2">
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_1.png" alt="Lida castle">
+                        <img src="images/page2/main-block2/main-block2_1.webp" alt="Lida castle">
                         <div>
                             <h3>Лидский замок, Лида</h3>
                             <p>от 125 BYN</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_2.png" alt="Mir Castle">
+                        <img src="images/page2/main-block2/main-block2_2.webp" alt="Mir Castle">
                         <div>
                             <h3>Мирский замок, Мир</h3>
                             <p>от 210 BYN</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_3.png" alt="Nesviz castle">
+                        <img src="images/page2/main-block2/main-block2_3.webp" alt="Nesviz castle">
                         <div>
                             <h3>Несвижский замок, Несвиж</h3>
                             <p>от 60 BYN</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_4.png" alt="Hrodno castle">
+                        <img src="images/page2/main-block2/main-block2_4.webp" alt="Hrodno castle">
                         <div>
                             <h3>Гродненский замок, Гродно</h3>
                             <p>от 150 BYN</p>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="main-block2__elem2__mobile">
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page1/main-block2/main-block2_1.png" alt="lida-castle">
+                        <img src="images/page1/main-block2/main-block2_1.webp" alt="lida-castle">
                         <div>
                             <h3>Лидский замок, Лида</h3>
                             <p>от 125 BYN</p>
@@ -101,14 +101,14 @@
                     </a>
                 </div>
                 <div class="mobile_switches">
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrowLeft"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.webp" alt="arrowLeft"></button>
                     <div class="main-block1__switches__radio">
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt="ball1"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt="ball2"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt="ball3"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt="ball3"></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball1"></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball2"></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrowRight"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrowRight"></button>
                 </div>
                 </div>
             </div>
@@ -120,28 +120,28 @@
                 </div>
                 <div class="main-block2__elem2">
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block3/main-block3_1.png" alt="Minsk-Hostel">
+                        <img src="images/page2/main-block3/main-block3_1.webp" alt="Minsk-Hostel">
                         <div>
                             <h3>Гостиница "Минск" 4*</h3>
                             <p>от 550 BYN за ночь</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block3/main-block3_2.png" alt="Victoria Olimp">
+                        <img src="images/page2/main-block3/main-block3_2.webp" alt="Victoria Olimp">
                         <div>
                             <h3>"Виктория Олимп" 4*</h3>
                             <p>от 250 BYN за ночь</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block3/main-block3_3.png" alt="President-hotel">
+                        <img src="images/page2/main-block3/main-block3_3.webp" alt="President-hotel">
                         <div>
                             <h3>Президент-отель 5*</h3>
                             <p>от 600 BYN за сутки</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block3/main-block3_4.png" alt="Sarai Heaven">
+                        <img src="images/page2/main-block3/main-block3_4.webp" alt="Sarai Heaven">
                         <div>
                             <h3>Сарай "Райская жизнь" 3*</h3>
                             <p>от 150 BYN за ночь</p>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="main-block2__elem2__mobile">
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block3/main-block3_1.png" alt="Minsk-hostel">
+                        <img src="images/page2/main-block3/main-block3_1.webp" alt="Minsk-hostel">
                         <div>
                             <h3>Гостиница "Минск" 4*</h3>
                             <p>от 125 BYN за ночь</p>
@@ -158,14 +158,14 @@
                     </a>
                 </div>
                 <div class="mobile_switches">
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrowLeft"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.webp" alt="arrowLeft"></button>
                     <div class="main-block1__switches__radio">
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt="ball1"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt="ball2"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt="ball3"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt="ball3"></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball1"></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball2"></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrowRight"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrowRight"></button>
                 </div>
                 </div>
             </div>
@@ -173,10 +173,10 @@
                 <div class="marg">
                 <h2>Сотрудничество</h2>
                 <div class="main-block4__group">
-                    <img src="images/page2/main-block4/main-block4_1.png" alt="Rosting">
-                    <img src="images/page2/main-block4/main-block4_2.png" alt="Sakub">
-                    <img src="images/page2/main-block4/main-block4_3.png" alt="TezTour">
-                    <img src="images/page2/main-block4/main-block4_4.png" alt="CoralTravel">
+                    <img src="images/page2/main-block4/main-block4_1.webp" alt="Rosting">
+                    <img src="images/page2/main-block4/main-block4_2.webp" alt="Sakub">
+                    <img src="images/page2/main-block4/main-block4_3.webp" alt="TezTour">
+                    <img src="images/page2/main-block4/main-block4_4.webp" alt="CoralTravel">
                 </div>
                 </div>
             </div>
