--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <header id="header">
             <div class="marg">
                 <nav class="header-menu__mobile">
-                    <div><a href="404.html"><img src="images/page1/header/Burger.png" alt="Burger"></a></div>
+                    <div><a href="404.html"><img src="images/page1/header/Burger.webp" alt="Burger"></a></div>
                     <div><a href="index.html">TRAVELCO</a></div>
-                    <div><a href="404.html"><img src="images/page1/header/Cabinet.png" alt="Cabinet"></a></div>
+                    <div><a href="404.html"><img src="images/page1/header/Cabinet.webp" alt="Cabinet"></a></div>
                 </nav>
                 <nav class="header-menu">
                     <div class="header-menu__left"><a href="index.html">TRAVELCO</a></div>
@@ -44,7 +44,7 @@
                 <h2>Самое время для путешествий!</h2>
                 <div class="main-block1__wrapper img_pop">
                     <div class="main-block1__elem1 page1m">
-                        <img src="images/page1/main-block1/main-block1.png" alt="minsk-foto">
+                        <img src="images/page1/main-block1/main-block1.webp" alt="minsk-foto">
                         <div class="main-block1__elem1_info" id="page1b1">
                             <h1>Минск, Беларусь</h1>
                             <p>Столица и крупнейший город Беларуси, административный центр Минской области и Минского района, в состав которых не входит, поскольку является самостоятельной административно-территориальной единицей с особым статусом. Крупнейший транспортный узел, политический, экономический, культурный и научный центр страны. Является ядром Минской агломерации. Десятый по численности населения город в Европе, пятый - после Москвы, Санкт-Петербурга, Ташкента, Киева, на территории бывшего СССР.</p>
@@ -52,22 +52,22 @@
                     </div>
                 </div>
                 <div class="mobile_switches">
-                    <button type="button" class="swiper-button-next"><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
+                    <button type="button" class="swiper-button-next"><img src="images/page1/main-block1/ArrowMobileLeft.webp" alt="arrow"></button>
                     <div class="main-block1__switches__radio">
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
                     </div>
-                    <button type="button" class="swiper-button-prev"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
+                    <button type="button" class="swiper-button-prev"><img src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrow"></button>
                 </div>
                 <div class="main-block1__switches">
-                    <button type="button"><img src="images/page1/main-block1/Arrow2.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/Arrow2.webp" alt="arrow"></button>
                     <div class="main-block1__switches__radio">
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/Arrow1.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/Arrow1.webp" alt="arrow"></button>
                 </div>
                 </div>
             </section>
@@ -78,28 +78,28 @@
                 </div>
                 <div class="main-block2__elem2 marg">
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page1/main-block2/main-block2_1.png" alt="lida-castle">
+                        <img src="images/page1/main-block2/main-block2_1.webp" alt="lida-castle">
                         <div>
                             <h3>Лидский замок, Лида</h3>
                             <p>от 125 BYN</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page1/main-block2/main-block2_2.png" alt="bali">
+                        <img src="images/page1/main-block2/main-block2_2.webp" alt="bali">
                         <div>
                             <h3>Бали, Бали</h3>
                             <p>от 12 210 BYN</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page1/main-block2/main-block2_3.png" alt="fudziama-japan">
+                        <img src="images/page1/main-block2/main-block2_3.webp" alt="fudziama-japan">
                         <div>
                             <h3>Фудзияма, Япония</h3>
                             <p>от 6 120 BYN</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page1/main-block2/main-block2_4.png" alt="#">
+                        <img src="images/page1/main-block2/main-block2_4.webp" alt="#">
                         <div>
                             <h3>ЧАЭС, Украина</h3>
                             <p>от 1 150 BYN</p>
@@ -109,7 +109,7 @@
                 <div class="marg">
                     <div class="main-block2__elem2__mobile">
                         <a href="404.html" class="main-block2__elem2__elem">
-                            <img src="images/page1/main-block2/main-block2_1.png" alt="lida-castle">
+                            <img src="images/page1/main-block2/main-block2_1.webp" alt="lida-castle">
                             <div>
                                 <h3>Лидский замок, Лида</h3>
                                 <p>от 125 BYN</p>
@@ -118,76 +118,76 @@
                     </div>
                 </div>
                 <div class="mobile_switches marg">
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.webp" alt="arrow"></button>
                     <div class="main-block1__switches__radio">
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt="ball3"></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrow"></button>
                 </div>
             </section>
             <section class="main-block3_">
                 <div class="main-block3 marg">
                     <a href="404.html">
-                        <img src="images/page1/main-block3/main-block3_1.png" alt="family">
+                        <img src="images/page1/main-block3/main-block3_1.webp" alt="family">
                         <h3>Отдых с семьей</h3>
                     </a>
                     <a href="404.html">
-                        <img src="images/page1/main-block3/main-block3_2.png" alt="beach">
+                        <img src="images/page1/main-block3/main-block3_2.webp" alt="beach">
                         <h3>Пляжный сезон</h3>
                     </a>
                     <a href="404.html">
-                        <img src="images/page1/main-block3/main-block3_3.png" alt="extreme">
+                        <img src="images/page1/main-block3/main-block3_3.webp" alt="extreme">
                         <h3>Экстремальный</h3>
                     </a>
                     <a href="404.html">
-                        <img src="images/page1/main-block3/main-block3_4.png" alt="home">
+                        <img src="images/page1/main-block3/main-block3_4.webp" alt="home">
                         <h3>Не выходя из дома</h3>
                     </a>
                     <a href="404.html">
-                        <img src="images/page1/main-block3/main-block3_5.png" alt="enterprise">
+                        <img src="images/page1/main-block3/main-block3_5.webp" alt="enterprise">
                         <h3>Корпоративный</h3>
                     </a>
                     <a href="404.html">
-                        <img src="images/page1/main-block3/main-block3_6.png" alt="exotic">
+                        <img src="images/page1/main-block3/main-block3_6.webp" alt="exotic">
                         <h3>Экзотика</h3>
                     </a>
                     <a href="404.html">
-                        <img src="images/page1/main-block3/main-block3_7.png" alt="available">
+                        <img src="images/page1/main-block3/main-block3_7.webp" alt="available">
                         <h3>Доступные</h3>
                     </a>
                     <a href="404.html">
-                        <img src="images/page1/main-block3/main-block3_8.png" alt="cruise">
+                        <img src="images/page1/main-block3/main-block3_8.webp" alt="cruise">
                         <h3>Круиз</h3>
                     </a>    
                     <a href="404.html">
-                        <img src="images/page1/main-block3/main-block3_9.png" alt="childrens">
+                        <img src="images/page1/main-block3/main-block3_9.webp" alt="childrens">
                         <h3>Отдых с детьми</h3>
                     </a>
                     <a href="404.html">
-                        <img src="images/page1/main-block3/main-block3_10.png" alt="main-country">
+                        <img src="images/page1/main-block3/main-block3_10.webp" alt="main-country">
                         <h3>Родная страна</h3>
                     </a>
                     <a href="404.html">
-                        <img src="images/page1/main-block3/main-block3_11.png" alt="new">
+                        <img src="images/page1/main-block3/main-block3_11.webp" alt="new">
                         <h3>Новинки</h3>
                     </a>
                     <a href="404.html" id="seemore">
-                        <img src="images/page1/main-block3/seenore.png" alt="seemore">
+                        <img src="images/page1/main-block3/seenore.webp" alt="seemore">
                         <h3>Смотреть больше</h3>
                     </a>
                 </div>
                 <div class="mobile_switches marg">
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.webp" alt="arrow"></button>
                     <div class="main-block1__switches__radio">
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt="ball3"></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrow"></button>
                 </div>
             </section>
             <section class="main-block4" id="page1">
@@ -197,19 +197,19 @@
                 </p>
                 <div class="main-block4__group">
                     <div>
-                        <img src="images/page1/main-block4/main-block4_ico1.png" alt="#">
+                        <img src="images/page1/main-block4/main-block4_ico1.webp" alt="#">
                         <h4>Всегда в тренде</h4>
                     </div>
                     <div>
-                        <img src="images/page1/main-block4/main-block4_ico2.png" alt="#">
+                        <img src="images/page1/main-block4/main-block4_ico2.webp" alt="#">
                         <h4>Гарантия качества</h4>
                     </div>
                     <div>
-                        <img src="images/page1/main-block4/main-block4_ico3.png" alt="#">
+                        <img src="images/page1/main-block4/main-block4_ico3.webp" alt="#">
                         <h4>Лучшие цены</h4>
                     </div>
                     <div>
-                        <img src="images/page1/main-block4/main-block4_ico4.png" alt="#">
+                        <img src="images/page1/main-block4/main-block4_ico4.webp" alt="#">
                         <h4>Безопасность</h4>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
 
         <div class="pop-up">
             <span>&times;</span>
-            <img src="images/page1/main-block1/main-block1.png" alt="full">
+            <img src="images/page1/main-block1/main-block1.webp" alt="full">
         </div>
     </div>
 
