--- a/travels.html
+++ b/travels.html
@@ -15,9 +15,9 @@
         <header id="header">
             <div class="marg">
                 <div class="header-menu__mobile">
-                    <div><a href="404.html"><img src="images/page1/header/Burger.png" alt="Burger"></a></div>
+                    <div><a href="404.html"><img src="images/page1/header/Burger.webp" alt="Burger"></a></div>
                     <div><a href="index.html">TRAVELCO</a></div>
-                    <div><a href="404.html"><img src="images/page1/header/Cabinet.png" alt="Cabinet"></a></div>
+                    <div><a href="404.html"><img src="images/page1/header/Cabinet.webp" alt="Cabinet"></a></div>
                 </div>
                 <div class="header-menu">
                     <div class="header-menu__left"><a href="index.html">TRAVELCO</a></div>
@@ -45,7 +45,7 @@
                 <h2>Подобранные варианты</h2>
                 <div class="main-block1__travels__elems img_pop">
                     <article class="main-block1__travels__elems_el">
-                        <img src="images/page3/main-block1/main-block1_1.png" alt="lida-lake1">
+                        <img src="images/page3/main-block1/main-block1_1.webp" alt="lida-lake1">
                         <div class="travels__elems_el_info">
                             <div class="el_info">
                                 <h3>Лидское озеро №1</h3>
@@ -56,15 +56,15 @@
                             <div class="categories">
                                 <div class="categories-left">
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>пляжный отдых</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>всё включено</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/no.png" alt="no">
+                                        <img src="images/page3/no.webp" alt="no">
                                         <p>СПА и термы</p>
                                     </div>
                                 </div>
@@ -76,7 +76,7 @@
                         </div>
                     </article>
                     <article class="main-block1__travels__elems_el">
-                        <img src="images/page3/main-block1/main-block1_2.png" alt="lida-lake2">
+                        <img src="images/page3/main-block1/main-block1_2.webp" alt="lida-lake2">
                         <div class="travels__elems_el_info">
                             <div class="el_info">
                                 <h3>Лидское озеро №2</h3>
@@ -87,15 +87,15 @@
                             <div class="categories">
                                 <div class="categories-left">
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>пляжный отдых</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>всё включено</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>СПА и термы</p>
                                     </div>
                                 </div>
@@ -107,7 +107,7 @@
                         </div>
                     </article>
                     <article class="main-block1__travels__elems_el">
-                        <img src="images/page3/main-block1/main-block1_3.png" alt="lida-castle">
+                        <img src="images/page3/main-block1/main-block1_3.webp" alt="lida-castle">
                         <div class="travels__elems_el_info">
                             <div class="el_info">
                                 <h3>Лидский замок</h3>
@@ -116,15 +116,15 @@
                             <div class="categories">
                                 <div class="categories-left">
                                     <div class="category">
-                                        <img src="images/page3/no.png" alt="no">
+                                        <img src="images/page3/no.webp" alt="no">
                                         <p>пляжный отдых</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/no.png" alt="no">
+                                        <img src="images/page3/no.webp" alt="no">
                                         <p>всё включено</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>СПА и термы</p>
                                     </div>
                                 </div>
@@ -136,7 +136,7 @@
                         </div>
                     </article>
                     <article class="main-block1__travels__elems_el">
-                        <img src="images/page3/main-block1/main-block1_4.png" alt="lida-lake3">
+                        <img src="images/page3/main-block1/main-block1_4.webp" alt="lida-lake3">
                         <div class="travels__elems_el_info">
                             <div class="el_info">
                                 <h3>Лидское озеро №3</h3>
@@ -147,15 +147,15 @@
                             <div class="categories">
                                 <div class="categories-left">
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>пляжный отдых</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/no.png" alt="no">
+                                        <img src="images/page3/no.webp" alt="no">
                                         <p>всё включено</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/no.png" alt="no">
+                                        <img src="images/page3/no.webp" alt="no">
                                         <p>СПА и термы</p>
                                     </div>
                                 </div>
@@ -167,7 +167,7 @@
                         </div>
                     </article>
                     <article class="main-block1__travels__elems_el">
-                        <img src="images/page3/main-block1/main-block1_5.png" alt="lida-lake4">
+                        <img src="images/page3/main-block1/main-block1_5.webp" alt="lida-lake4">
                         <div class="travels__elems_el_info">
                             <div class="el_info">
                                 <h3>Мифическое лидское озеро №4</h3>
@@ -178,15 +178,15 @@
                             <div class="categories">
                                 <div class="categories-left">
                                     <div class="category">
-                                        <img src="images/page3/no.png" alt="no">
+                                        <img src="images/page3/no.webp" alt="no">
                                         <p>пляжный отдых</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>всё включено</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>СПА и термы</p>
                                     </div>
                                 </div>
@@ -198,7 +198,7 @@
                         </div>
                     </article>
                     <article class="main-block1__travels__elems_el">
-                        <img src="images/page3/main-block1/main-block1_6.png" alt="dacha-Nikita">
+                        <img src="images/page3/main-block1/main-block1_6.webp" alt="dacha-Nikita">
                         <div class="travels__elems_el_info">
                             <div class="el_info">
                                 <h3>Дача "У Никиты"</h3>
@@ -209,15 +209,15 @@
                             <div class="categories">
                                 <div class="categories-left">
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>пляжный отдых</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>всё включено</p>
                                     </div>
                                     <div class="category">
-                                        <img src="images/page3/yes.png" alt="yes">
+                                        <img src="images/page3/yes.webp" alt="yes">
                                         <p>СПА и термы</p>
                                     </div>
                                 </div>
@@ -240,28 +240,28 @@
                 </div>
                 <div class="main-block2__elem2">
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_1.png" alt="Lida castle">
+                        <img src="images/page2/main-block2/main-block2_1.webp" alt="Lida castle">
                         <div>
                             <h3>Лидский замок, Лида</h3>
                             <p>от 125 BYN</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_2.png" alt="Mir Castle">
+                        <img src="images/page2/main-block2/main-block2_2.webp" alt="Mir Castle">
                         <div>
                             <h3>Мирский замок, Мир</h3>
                             <p>от 210 BYN</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_3.png" alt="Nesviz castle">
+                        <img src="images/page2/main-block2/main-block2_3.webp" alt="Nesviz castle">
                         <div>
                             <h3>Несвижский замок, Несвиж</h3>
                             <p>от 60 BYN</p>
                         </div>
                     </a>
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_4.png" alt="Hrodno castle">
+                        <img src="images/page2/main-block2/main-block2_4.webp" alt="Hrodno castle">
                         <div>
                             <h3>Гродненский замок, Гродно</h3>
                             <p>от 150 BYN</p>
@@ -270,7 +270,7 @@
                 </div>
                 <div class="main-block2__elem2__mobile">
                     <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page1/main-block2/main-block2_1.png" alt="lida-castle">
+                        <img src="images/page1/main-block2/main-block2_1.webp" alt="lida-castle">
                         <div>
                             <h3>Лидский замок, Лида</h3>
                             <p>от 125 BYN</p>
@@ -278,14 +278,14 @@
                     </a>
                 </div>
                 <div class="mobile_switches">
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.webp" alt="arrow"></button>
                     <div class="main-block1__switches__radio">
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.png" alt="ball3"></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrow"></button>
                 </div>
                 </div>
             </div>
@@ -317,7 +317,7 @@
 
         <div class="pop-up">
             <span>&times;</span>
-            <img src="images/page1/main-block1/main-block1.png" alt="full">
+            <img src="images/page1/main-block1/main-block1.webp" alt="full">
         </div>
     </div>
 
